Finished the api of checking the participation status of the talent.
